--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: title
-description: A minimal and beautiful Jekyll theme best for writing and note-taking.
+title: chenkang Blog
+description: a noob
 author: chenkang
 avatar: /logo.png
-email: ngzhio@gmail.com
+email: 1206734994@qq.com
 
 plugins:
   - jekyll-seo-tag
@@ -34,10 +34,8 @@ twitter:
   card: summary
 logo: logo.png
 social:
-  name: Shangzhi Huang
+  name: chenkang
   links:
-    - https://twitter.com/ngzhio
-    - https://www.facebook.com/ngzhio
-    - https://github.com/ngzhio
+    - https://github.com/chenkang-noob
 google_site_verification: u4WXQl0Eu66rsQo2kRdCNx
-lang: en
+lang: cn
