--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
-- title: About
+- title: 关于
   url: /about/
-- title: Years
-  url: /years/
+# - title: Years
+#   url: /years/
 - title: Categories
   url: /categories/
-- title: Tags
+- title: 标签
   url: /tags/
-- title: More
+- title: 更多
   sublinks:
     - title: FAQ
       url: /faq/
