--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
   url: /about/
 # - title: Years
 #   url: /years/
-- title: Categories
+- title: 分类
   url: /categories/
 - title: 标签
   url: /tags/
